<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ronicode.tarea4_curso3.ListaMascotas"
    >

    <item
        android:id="@+id/itmenuFavorito"
        android:icon="@drawable/favorito"
        android:title="@string/opcion"
        app:showAsAction="ifRoom|withText"
        >

    </item>

    <item
        android:id="@+id/itmenuContacto"
        android:title="@string/item_contacto"
        android:orderInCategory="100"
        app:showAsAction="never"
        >

    </item>

    <item
        android:id="@+id/itmenuAcercade"
        android:title="@string/item_acercade"
        android:orderInCategory="100"
        app:showAsAction="never"
        >

    </item>

</menu>