<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ronicode.tarea4_curso3.Contacto">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        >

    </include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miActionBar"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/for_nombre"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilNombre"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/for_email"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:hint="@string/for_mensaje"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviarcomentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tilMensaje"
        android:text="@string/text_bottom"
        android:onClick="sendEmail"
        android:textColor="@color/colortexto"
        android:background="@color/colorbottom"
        />

</RelativeLayout>
